...
    final themeMode = ref.watch(themeProvider);

    return _AppLifecycleBootstrapSync(
      child: DynamicColorBuilder(
        builder: (lightDynamic, darkDynamic) {
          return MaterialApp.router(
            title: 'PetFolio',
            theme: AppTheme.lightTheme.copyWith(
              colorScheme: lightDynamic ?? AppTheme.lightTheme.colorScheme,
            ),
            darkTheme: AppTheme.darkTheme.copyWith(
              colorScheme: darkDynamic ?? AppTheme.darkTheme.colorScheme,
            ),
...
